--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,11 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="red">#FF0000</color>
+    <color name="orange">#FF8A00</color>
+    <color name="green">#00B000</color>
+
+    <color name="white_60">#60FFFFFF</color>
+    <color name="bg_color_primary">#111111</color>
+    <color name="bg_color_secondary">#232323</color>
 </resources>
